[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Arena.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Score.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Player01Score.gd" type="Script" id=3]
[ext_resource path="res://scenes/Player02Score.gd" type="Script" id=4]
[ext_resource path="res://scenes/Editor.gd" type="Script" id=5]
[ext_resource path="res://Dog_Skull_-_screen_4-3.png" type="Texture" id=6]

[node name="Arena" type="Node2D"]
script = ExtResource( 1 )

[node name="Player01Score" type="Label" parent="."]
margin_left = 125.0
margin_top = 115.0
margin_right = 298.0
margin_bottom = 243.0
custom_fonts/font = ExtResource( 2 )
text = "0"
script = ExtResource( 3 )

[node name="Player02Score" type="Label" parent="."]
margin_left = 811.744
margin_top = 97.149
margin_right = 1107.74
margin_bottom = 214.149
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
script = ExtResource( 4 )

[node name="Editor" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 820.833
margin_top = 319.258
margin_right = 997.833
margin_bottom = 587.258
rect_scale = Vector2( 2, 2 )
focus_mode = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="player_speed" type="Label" parent="Editor"]
margin_right = 177.0
margin_bottom = 14.0
text = "player_speed"

[node name="player_speed_edit" type="LineEdit" parent="Editor"]
margin_top = 18.0
margin_right = 177.0
margin_bottom = 42.0
focus_mode = 1
text = "0"
focus_mode = 1

[node name="player_speedup" type="Label" parent="Editor"]
margin_top = 46.0
margin_right = 177.0
margin_bottom = 60.0
text = "player_speedup"

[node name="player_speedup_edit" type="LineEdit" parent="Editor"]
margin_top = 64.0
margin_right = 177.0
margin_bottom = 88.0
focus_mode = 1
text = "0"
focus_mode = 1

[node name="player_countdown" type="Label" parent="Editor"]
margin_top = 92.0
margin_right = 177.0
margin_bottom = 106.0
text = "player_cooldown"

[node name="player_countdown_edit" type="LineEdit" parent="Editor"]
margin_top = 110.0
margin_right = 177.0
margin_bottom = 134.0
focus_mode = 1
text = "0"
focus_mode = 1

[node name="ball_speed" type="Label" parent="Editor"]
margin_top = 138.0
margin_right = 177.0
margin_bottom = 152.0
text = "ball_speed"

[node name="ball_speed_edit" type="LineEdit" parent="Editor"]
margin_top = 156.0
margin_right = 177.0
margin_bottom = 180.0
focus_mode = 1
text = "0"
focus_mode = 1

[node name="player_speeddown" type="Label" parent="Editor"]
margin_top = 184.0
margin_right = 177.0
margin_bottom = 198.0
text = "player_speeddown"

[node name="player_speeddown_edit" type="LineEdit" parent="Editor"]
margin_top = 202.0
margin_right = 177.0
margin_bottom = 226.0

[node name="ShitBox" type="LineEdit" parent="Editor"]
margin_top = 230.0
margin_right = 177.0
margin_bottom = 254.0
text = "Shit box"

[node name="Balls" type="Node2D" parent="."]

[node name="ArenaMap" type="StaticBody2D" parent="."]
editor/display_folded = true
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ArenaMap"]
position = Vector2( 600, 449.5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ArenaMap"]
polygon = PoolVector2Array( 83, 497, 123, 517, 121, 431, 121, 327, 186, 270, 1000, 271, 1059, 327, 1054, 437, 1056, 506, 1099, 502, 1351, 502, 1351, -69, -90, -72, -94, 490 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="ArenaMap"]
polygon = PoolVector2Array( 77, 510, -96, 504, -103, 1062, 1383, 1057, 1351, 525, 1098, 508, 1056, 508, 1055, 621, 1060, 741, 1002, 789, 177, 793, 123, 737, 119, 632, 121, 523 )
[connection signal="focus_exited" from="Editor/player_speed_edit" to="Editor" method="_on_player_speed_edit_focus_exited"]
[connection signal="text_changed" from="Editor/player_speed_edit" to="Editor" method="_on_player_speed_edit_text_changed"]
[connection signal="focus_exited" from="Editor/player_speedup_edit" to="Editor" method="_on_player_speedup_edit_focus_exited"]
[connection signal="text_changed" from="Editor/player_speedup_edit" to="Editor" method="_on_player_speedup_edit_text_changed"]
[connection signal="focus_exited" from="Editor/player_countdown_edit" to="Editor" method="_on_player_countdown_edit_focus_exited"]
[connection signal="text_changed" from="Editor/player_countdown_edit" to="Editor" method="_on_player_countdown_edit_text_changed"]
[connection signal="focus_exited" from="Editor/ball_speed_edit" to="Editor" method="_on_ball_speed_edit_focus_exited"]
[connection signal="text_changed" from="Editor/ball_speed_edit" to="Editor" method="_on_ball_speed_edit_text_changed"]
[connection signal="text_changed" from="Editor/player_speeddown_edit" to="Editor" method="_on_player_speeddown_edit_text_changed"]
